force-app/main/default/objects/Order_Refund__c/Order_Refund__c.object-meta.xml
<CustomObject>
    <description>환불된 주문건</description>
    <label>환불</label>
    <nameField>
        <displayFormat>Refund-{0000}</displayFormat>
        <label>환불 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>환불</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>