force-app/main/default/objects/Order_Refund__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>판매 지점</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>환불</relationshipLabel>
    <relationshipName>Order_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>