force-app/main/default/objects/Order_Refund__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>고객명</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>환불</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>