force-app/main/default/objects/Order_Refund__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <label>주문서</label>
    <length>255</length>
    <type>Text</type>
</CustomField>