force-app/main/default/objects/Order_Refund__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>환불 사유</label>
    <length>255</length>
    <type>Text</type>
</CustomField>