force-app/main/default/objects/Order_Refund__c/fields/Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Date__c</fullName>
    <label>환불 날짜</label>
    <type>Date</type>
</CustomField>