force-app/main/default/objects/Order_Refund__c/fields/Refund_Product_List__c.field-meta.xml
<CustomField>
    <fullName>Refund_Product_List__c</fullName>
    <label>환불된 제품 리스트</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>