force-app/main/default/objects/Order_Refund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Order_Name__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Refund_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>